# TracksForPrivateAthleteDB

./: .eslintrc.json  .firebaserc  .gitignore  README.md  codegen.yml  cron.sh  db.json  firebase.json  index.html  package.json  tsconfig.json  vite.config.ts
.firebase/: hosting.ZGlzdA.cache
.github/actions/: deploy.yml
.github/workflows/: deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.schema/: rikujo_data.yaml
api_schema/: track_search_api.v1.yml
backend/: .gitignore  Dockerfile  docker-compose.yml  package.json  schema.gql  tsconfig.json
backend/src/: app.module.ts  firebase.ts  index.ts  main.ts
backend/src/firebase/: firebase.module.ts  firebase.service.ts
backend/src/greet/: hello.model.ts  hello.service.ts
backend/src/prisma/: prisma.module.ts  (+1 more)
functions/: package.json  tsconfig.json
functions/src/: index.ts
py-functions/: .gitignore  README.md  pyproject.toml
py-functions/src/py_functions/: __init__.py
src/: App.tsx  Firebase.ts  Providers.tsx  firebase.js  main.tsx
src/apis/: comments.ts  tracks.ts
src/auth/: AuthProvider.tsx
src/components/: LiquorList.tsx  TrackList.tsx
src/data/: available_date.ts  comments.ts  index.ts  prefectures.ts  track.ts  tracks.ts  users.ts
src/domains/: constants.ts  types.ts
src/graphql/: generated.graphql.ts  hello.query.gql
src/hooks/: useFetchAvailableDate.tsx  useTrack.tsx
src/lib/: fetch_todoroki_pdf.py  gql-requests.ts
src/routes/: index.tsx
src/store/: index.ts
src/utils/: urlUtils.ts
ts-functions/: .eslintrc.json  .gitignore  package.json
(+117 files in other folders)
